
message CRDTExtraMetaLayerSave {
  // Includes the saving replicaId.
  map<string, uint64> vectorClock = 1;
  required uint64 lamportTimestamp = 2;
  required bytes childSave = 3;
}
